--- a/Database I/2019/Kelas A/1194026 Muhammad Syairul Amrullah/Tugas I/main.tex
+++ b/Database I/2019/Kelas A/1194026 Muhammad Syairul Amrullah/Tugas I/main.tex
@@ -7,7 +7,7 @@
 
     \begin{document}
         \begin{center}
-            \includegraphics[width=5cm,height=5cm]{D:/testingg/logo-poltekpos.png}
+            \includegraphics[width=5cm,height=5cm]{logo-poltekpos.png}
         \end{center}
         \begin{center}
             \textbf{Basis  Data I} \\
@@ -40,7 +40,7 @@
         \end{center}
          \begin{figure}
             \centering
-            \includegraphics[width=5cm]{D:/tugas_dokumen/database/tugas 1/database&cloud.png}
+            \includegraphics[width=5cm]{database&cloud.png}
           \end{figure}
         \section{\textbf{pengenalan basis data}}
 
