--- a/Database I/2019/Kelas A/1194024 Muhammad Farhan Faridz Sofyan/Tugas I/tugas1.tex
+++ b/Database I/2019/Kelas A/1194024 Muhammad Farhan Faridz Sofyan/Tugas I/tugas1.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+    \documentclass{article}
 \usepackage[utf8]{inputenc}
 
 \title{Rangkuman Basis Data}
@@ -21,7 +21,6 @@
     NPM & : & 1194024\\
     Kelas & : & 1A\\
     Prodi & : & D4 Teknik Informatika\\
-
 \end{tabular}    
 \end{center}
 
@@ -39,7 +38,7 @@ Basis Data merupakan data atau informasi yang dapat dipertanggung jawabkan keben
     \item Memudahkan Identifikasi
 \end{itemize}
 
-\section{Jenis Jenis Database}
+\section{Jenis Jenis Basis Data}
 \begin{itemize}
     \item MySQL
     \item Oracle
